# HPC-Course-2024

./: CMakeLists.txt  LICENSE  README.md  readme.md
e01-basics/: basics01.h  basics02.h  basics03.h  main.cpp
e01-helloworld/: CMakeLists.txt  main.cpp
